--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 project(MultiObjectTracking-C++)
-set(CMAKE_BUILT_TYPE debug)
+set(CMAKE_BUILD_TYPE debug)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 find_package(OpenCV REQUIRED)
 file(GLOB_RECURSE SOURCES src/*.cpp)
