Added config file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ find_package(OpenCV REQUIRED)
 file(GLOB_RECURSE SOURCES src/*.cpp)
 add_executable(mw-tracking ${SOURCES})
 target_link_libraries(mw-tracking ${OpenCV_LIBS})
+configure_file(config.yml ${CMAKE_CURRENT_BINARY_DIR}/config.yml COPYONLY)
